tests/parse_print/autogen/326~final/stderr.expected
Error:
    tests/parse_print/autogen/326~final/spec.essence:6:14:
  |
6 |              partition({[true; int(1..1)]}) - partition({[false; int(1..1)]}))
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from matrix indexed by [int] of bool

tests/parse_print/autogen/326~final/spec.essence:6:47:
  |
6 |              partition({[true; int(1..1)]}) - partition({[false; int(1..1)]}))
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from matrix indexed by [int] of bool
